# pomelo

./: .gitignore  Makefile  README.md  cabal.project
core/: LICENSE  pomelo-core.cabal
